The help page was added

--- a/app/assets/health.html
+++ b/app/assets/health.html
@@ -45,7 +45,8 @@
                                 </li>
                                 <li class="navigation__list-item"><a class="navigation__list-link" href="#">Мы с вами
                                         помогли</a></li>
-                                <li class="navigation__list-item"><a class="navigation__list-link navigation__list-link_active" href="#">Генетические
+                                <li class="navigation__list-item"><a
+                                        class="navigation__list-link navigation__list-link_active" href="#">Генетические
                                         заболевания</a></li>
                                 <li class="navigation__list-item"><a class="navigation__list-link" href="#">Контакты</a>
                                 </li>
@@ -70,42 +71,96 @@
                         </div>
                         <h1 class="template__title">Генетические заболевания</h1>
                         <div class="template__grid health-template__grid">
-                            <a href="#" class="health-item health-template__grid-item">
+                            <a href="#health-modal" rel="modal:open" class="health-item health-template__grid-item">
                                 <div class="health-item__wrapper">
                                     <span class="health-item__title">Спинальная мышечная атрофия</span>
-                                <div class="health-item__content">
-                                    <p>Заболевание развивается, только если ребенок унаследует поломанный ген и от матери, и от отца. По разным данным носителями заболевания являются до 19% населения…</p>
-                                </div>
-                                <button type="button" class="health-item__link">
-                                    Подробнее
-                                    <svg width="34.354" height="17.594"><g fill="none"><path d="M0 .239h34v17H0z"/><path d="M1.294 8.797h31.649M32.943 8.797l-8.437-7.385M32.943 8.797l-8.437 7.385" stroke="#f28314" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="79.84" stroke-width="2"/></g></svg>
-                                </button>
+                                    <div class="health-item__content">
+                                        <p>Заболевание развивается, только если ребенок унаследует поломанный ген и от
+                                            матери, и от отца. По разным данным носителями заболевания являются до 19%
+                                            населения…</p>
+                                    </div>
+                                    <button type="button" class="health-item__link">
+                                        Подробнее
+                                        <svg width="34.354" height="17.594">
+                                            <g fill="none">
+                                                <path d="M0 .239h34v17H0z" />
+                                                <path
+                                                    d="M1.294 8.797h31.649M32.943 8.797l-8.437-7.385M32.943 8.797l-8.437 7.385"
+                                                    stroke="#f28314" stroke-linecap="round" stroke-linejoin="round"
+                                                    stroke-miterlimit="79.84" stroke-width="2" />
+                                            </g>
+                                        </svg>
+                                    </button>
                                 </div>
                             </a>
-                            <a href="#" class="health-item health-template__grid-item">
+                            <a href="#health-modal" rel="modal:open" class="health-item health-template__grid-item">
                                 <div class="health-item__wrapper">
                                     <span class="health-item__title">Спинальная мышечная атрофия</span>
-                                <div class="health-item__content">
-                                    <p>Заболевание развивается, только если ребенок унаследует поломанный ген и от матери, и от отца. По разным данным носителями заболевания являются до 19% населения…</p>
-                                </div>
-                                <button type="button" class="health-item__link">
-                                    Подробнее
-                                    <svg width="34.354" height="17.594"><g fill="none"><path d="M0 .239h34v17H0z"/><path d="M1.294 8.797h31.649M32.943 8.797l-8.437-7.385M32.943 8.797l-8.437 7.385" stroke="#f28314" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="79.84" stroke-width="2"/></g></svg>
-                                </button>
+                                    <div class="health-item__content">
+                                        <p>Заболевание развивается, только если ребенок унаследует поломанный ген и от
+                                            матери, и от отца. По разным данным носителями заболевания являются до 19%
+                                            населения…</p>
+                                    </div>
+                                    <button type="button" class="health-item__link">
+                                        Подробнее
+                                        <svg width="34.354" height="17.594">
+                                            <g fill="none">
+                                                <path d="M0 .239h34v17H0z" />
+                                                <path d="M1.294 8.797h31.649M32.943 8.797l-8.437-7.385M32.943 8.797l-8.437 7.385" stroke="#f28314" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="79.84" stroke-width="2" />
+                                            </g>
+                                        </svg>
+                                    </button>
                                 </div>
                             </a>
-                            <a href="#" class="health-item health-template__grid-item">
+                            <a href="#health-modal" rel="modal:open" class="health-item health-template__grid-item">
                                 <div class="health-item__wrapper">
                                     <span class="health-item__title">Спинальная мышечная атрофия</span>
-                                <div class="health-item__content">
-                                    <p>Заболевание развивается, только если ребенок унаследует поломанный ген и от матери, и от отца. По разным данным носителями заболевания являются до 19% населения…</p>
-                                </div>
-                                <button type="button" class="health-item__link">
-                                    Подробнее
-                                    <svg width="34.354" height="17.594"><g fill="none"><path d="M0 .239h34v17H0z"/><path d="M1.294 8.797h31.649M32.943 8.797l-8.437-7.385M32.943 8.797l-8.437 7.385" stroke="#f28314" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="79.84" stroke-width="2"/></g></svg>
-                                </button>
+                                    <div class="health-item__content">
+                                        <p>Заболевание развивается, только если ребенок унаследует поломанный ген и от
+                                            матери, и от отца. По разным данным носителями заболевания являются до 19%
+                                            населения…</p>
+                                    </div>
+                                    <button type="button" class="health-item__link">
+                                        Подробнее
+                                        <svg width="34.354" height="17.594">
+                                            <g fill="none">
+                                                <path d="M0 .239h34v17H0z" />
+                                                <path
+                                                    d="M1.294 8.797h31.649M32.943 8.797l-8.437-7.385M32.943 8.797l-8.437 7.385"
+                                                    stroke="#f28314" stroke-linecap="round" stroke-linejoin="round"
+                                                    stroke-miterlimit="79.84" stroke-width="2" />
+                                            </g>
+                                        </svg>
+                                    </button>
                                 </div>
                             </a>
+                        </div>
+                        <div class="help-form template__help-form">
+                            <div class="help-form__wrapper">
+                                <form class="form help-form__instance">
+                                    <span class="help-form__title">Я хочу помочь</span>
+                                    <div class="form__row help-form__row form__value help-form__value">
+                                        <label class="radio form__radio help-form__radio">
+                                            <input name="value" checked type="radio" class="radio__input" value="150">
+                                            <span class="radio__name form__input">150</span>
+                                        </label>
+                                        <label class="radio form__radio help-form__radio">
+                                            <input name="value" type="radio" class="radio__input" value="250">
+                                            <span class="radio__name form__input">250</span>
+                                        </label>
+                                        <label class="radio form__radio help-form__radio">
+                                            <input name="value" type="radio" class="radio__input" value="500">
+                                            <span class="radio__name form__input">500</span>
+                                        </label>
+                                        <label class="radio form__radio help-form__radio">
+                                            <input name="value" type="radio" class="radio__input" value="1000">
+                                            <span class="radio__name form__input">1000</span>
+                                        </label>
+                                        <input type="text" placeholder="Другая сумма" class="form__input form__value-input help-form__value-input">
+                                    </div>
+                                    <button type="submit" class="btn btn_size-m btn_is-colored form__btn help-form__btn">Пожертвовать</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -181,7 +236,14 @@
     </footer>
     <!-- End footer -->
     <!-- Begin modal -->
-    <div class="modal"></div>
+    <div id="health-modal" class="modal health-modal">
+        <div class="modal__wrapper">
+            <span class="modal__title">Семейная гиперхолестеринемия</span>
+            <div class="modal__content">
+                <p>Считается самым частым генетическим заболеванием человека. Если больной унаследует ген, вызывающий заболевание, и от отца, и от матери, то течение будет очень тяжелым и продолжительность жизни резко уменьшается (большинство больных умирает от инфаркта или инсульта до 30 летнего возраста, в том числе высока и детская смертность). Если наследуется больной ген только от одного из родителей, заболевание протекает легче, но все равно риск ранней сердечно-сосудистой смерти повышается в 20 раз. Сначала заболевание протекает незаметно: наблюдается только значительно повышенный уровень холестерина в крови (фракция низкой плотности). Потом появляются симптомы отложения холестерина под кожей в области сухожилий, глаз и симптомы сердечно-сосудистых осложнений из-за отложений холестерина на стенках сосудов и на клапанах сердца (в том числе развивается ишемическая болезнь сердца, приводящая к инфаркту миокарда). Понизить уровень холестерина низкой плотности при этом заболевании диетой невозможно. Заболевание имеет эффективное медикаментозное лечение, поэтому критически важно о нем узнать как можно раньше.</p>
+            </div>
+        </div>
+    </div>
     <!-- End modal -->
     <!-- BEGIN scripts -->
     <script src="js/application.js"></script>
