--- a/public/help.html
+++ b/public/help.html
@@ -43,10 +43,10 @@
                             <ul class="list navigation__list navigation__list_end">
                                 <li class="navigation__list-item"><a class="navigation__list-link" href="#">О фонде</a>
                                 </li>
-                                <li class="navigation__list-item"><a class="navigation__list-link" href="#">Мы с вами
+                                <li class="navigation__list-item"><a class="navigation__list-link navigation__list-link_active" href="#">Мы с вами
                                         помогли</a></li>
                                 <li class="navigation__list-item"><a
-                                        class="navigation__list-link navigation__list-link_active" href="#">Генетические
+                                        class="navigation__list-link" href="#">Генетические
                                         заболевания</a></li>
                                 <li class="navigation__list-item"><a class="navigation__list-link" href="#">Контакты</a>
                                 </li>
@@ -67,17 +67,16 @@
                         <div class="breadcrumbs template__breadcrumbs">
                             <a href="#">Главная</a>
                             |
-                            <span>Генетические заболевания</span>
+                            <span>Мы с вами помогли</span>
                         </div>
-                        <h1 class="template__title">Генетические заболевания</h1>
+                        <h1 class="template__title">Мы с вами помогли</h1>
                         <div class="template__grid health-template__grid">
-                            <a href="#health-modal" rel="modal:open" class="health-item health-template__grid-item">
+                            <a href="#" class="health-item health-template__grid-item">
                                 <div class="health-item__wrapper">
-                                    <span class="health-item__title">Спинальная мышечная атрофия</span>
+                                    <span class="health-item__title">Мальчик</span>
+                                    <span class="health-item__location">Калининградская область</span>
                                     <div class="health-item__content">
-                                        <p>Заболевание развивается, только если ребенок унаследует поломанный ген и от
-                                            матери, и от отца. По разным данным носителями заболевания являются до 19%
-                                            населения…</p>
+                                        <p>Никакими методами не получалось выявить причину заболевания, и ребенок находился под риском. Фонд Геном Жизни профинансировал комплексное молекулярно-генетическое исследование ребенка.</p>
                                     </div>
                                     <button type="button" class="health-item__link">
                                         Подробнее
@@ -93,32 +92,33 @@
                                     </button>
                                 </div>
                             </a>
-                            <a href="#health-modal" rel="modal:open" class="health-item health-template__grid-item">
+                            <a href="#" class="health-item health-template__grid-item">
                                 <div class="health-item__wrapper">
-                                    <span class="health-item__title">Спинальная мышечная атрофия</span>
+                                    <span class="health-item__title">Мальчик</span>
+                                    <span class="health-item__location">Калининградская область</span>
                                     <div class="health-item__content">
-                                        <p>Заболевание развивается, только если ребенок унаследует поломанный ген и от
-                                            матери, и от отца. По разным данным носителями заболевания являются до 19%
-                                            населения…</p>
+                                        <p>Никакими методами не получалось выявить причину заболевания, и ребенок находился под риском. Фонд Геном Жизни профинансировал комплексное молекулярно-генетическое исследование ребенка.</p>
                                     </div>
                                     <button type="button" class="health-item__link">
                                         Подробнее
                                         <svg width="34.354" height="17.594">
                                             <g fill="none">
                                                 <path d="M0 .239h34v17H0z" />
-                                                <path d="M1.294 8.797h31.649M32.943 8.797l-8.437-7.385M32.943 8.797l-8.437 7.385" stroke="#f28314" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="79.84" stroke-width="2" />
+                                                <path
+                                                    d="M1.294 8.797h31.649M32.943 8.797l-8.437-7.385M32.943 8.797l-8.437 7.385"
+                                                    stroke="#f28314" stroke-linecap="round" stroke-linejoin="round"
+                                                    stroke-miterlimit="79.84" stroke-width="2" />
                                             </g>
                                         </svg>
                                     </button>
                                 </div>
                             </a>
-                            <a href="#health-modal" rel="modal:open" class="health-item health-template__grid-item">
+                            <a href="#" class="health-item health-template__grid-item">
                                 <div class="health-item__wrapper">
-                                    <span class="health-item__title">Спинальная мышечная атрофия</span>
+                                    <span class="health-item__title">Мальчик</span>
+                                    <span class="health-item__location">Калининградская область</span>
                                     <div class="health-item__content">
-                                        <p>Заболевание развивается, только если ребенок унаследует поломанный ген и от
-                                            матери, и от отца. По разным данным носителями заболевания являются до 19%
-                                            населения…</p>
+                                        <p>Никакими методами не получалось выявить причину заболевания, и ребенок находился под риском. Фонд Геном Жизни профинансировал комплексное молекулярно-генетическое исследование ребенка.</p>
                                     </div>
                                     <button type="button" class="health-item__link">
                                         Подробнее
