Help single page was added

--- a/app/assets/help-single.html
+++ b/app/assets/help-single.html
@@ -67,75 +67,23 @@
                         <div class="breadcrumbs template__breadcrumbs">
                             <a href="#">Главная</a>
                             |
-                            <span>Мы с вами помогли</span>
+                            <a href="#">Мы с вами помогли</a>
+                            |
+                            <span>Две девочки</span>
                         </div>
-                        <h1 class="template__title">Мы с вами помогли</h1>
-                        <div class="template__grid health-template__grid">
-                            <a href="#" class="health-item health-template__grid-item">
-                                <div class="health-item__wrapper">
-                                    <span class="health-item__title">Мальчик</span>
-                                    <span class="health-item__location">Калининградская область</span>
-                                    <div class="health-item__content">
-                                        <p>Никакими методами не получалось выявить причину заболевания, и ребенок находился под риском. Фонд Геном Жизни профинансировал комплексное молекулярно-генетическое исследование ребенка.</p>
-                                    </div>
-                                    <button type="button" class="health-item__link">
-                                        Подробнее
-                                        <svg width="34.354" height="17.594">
-                                            <g fill="none">
-                                                <path d="M0 .239h34v17H0z" />
-                                                <path
-                                                    d="M1.294 8.797h31.649M32.943 8.797l-8.437-7.385M32.943 8.797l-8.437 7.385"
-                                                    stroke="#f28314" stroke-linecap="round" stroke-linejoin="round"
-                                                    stroke-miterlimit="79.84" stroke-width="2" />
-                                            </g>
-                                        </svg>
-                                    </button>
-                                </div>
-                            </a>
-                            <a href="#" class="health-item health-template__grid-item">
-                                <div class="health-item__wrapper">
-                                    <span class="health-item__title">Мальчик</span>
-                                    <span class="health-item__location">Калининградская область</span>
-                                    <div class="health-item__content">
-                                        <p>Никакими методами не получалось выявить причину заболевания, и ребенок находился под риском. Фонд Геном Жизни профинансировал комплексное молекулярно-генетическое исследование ребенка.</p>
-                                    </div>
-                                    <button type="button" class="health-item__link">
-                                        Подробнее
-                                        <svg width="34.354" height="17.594">
-                                            <g fill="none">
-                                                <path d="M0 .239h34v17H0z" />
-                                                <path
-                                                    d="M1.294 8.797h31.649M32.943 8.797l-8.437-7.385M32.943 8.797l-8.437 7.385"
-                                                    stroke="#f28314" stroke-linecap="round" stroke-linejoin="round"
-                                                    stroke-miterlimit="79.84" stroke-width="2" />
-                                            </g>
-                                        </svg>
-                                    </button>
-                                </div>
-                            </a>
-                            <a href="#" class="health-item health-template__grid-item">
-                                <div class="health-item__wrapper">
-                                    <span class="health-item__title">Мальчик</span>
-                                    <span class="health-item__location">Калининградская область</span>
-                                    <div class="health-item__content">
-                                        <p>Никакими методами не получалось выявить причину заболевания, и ребенок находился под риском. Фонд Геном Жизни профинансировал комплексное молекулярно-генетическое исследование ребенка.</p>
-                                    </div>
-                                    <button type="button" class="health-item__link">
-                                        Подробнее
-                                        <svg width="34.354" height="17.594">
-                                            <g fill="none">
-                                                <path d="M0 .239h34v17H0z" />
-                                                <path
-                                                    d="M1.294 8.797h31.649M32.943 8.797l-8.437-7.385M32.943 8.797l-8.437 7.385"
-                                                    stroke="#f28314" stroke-linecap="round" stroke-linejoin="round"
-                                                    stroke-miterlimit="79.84" stroke-width="2" />
-                                            </g>
-                                        </svg>
-                                    </button>
-                                </div>
+                        <h1 class="template__title">Две девочки</h1>
+                        <span class="template__note">Калининградская область</span>
+                        <div class="template__grid">
+                            <div class="template__content">
+                                <p>Семья очень ждала рождения первенца, но девочка оказалась тяжело больна. Проведенные обследования не выявляли причины заболевания. Родители решились на рождение второго ребенка, но и у второй девочки появилась схожая клиника заболевания. И вновь обследования не помогли установить причину. На средства Фонда Геном Жизни были проведены исследования полного генома двух девочек и генетическое исследование родителей, что позволило выявить причину заболевания, носителями которого были родители. Девочки унаследовали две разные особенные поломки одного и того же гена от двух родителей.</p>
+                                <p>Спустя 10 лет от начала поиска причины состояния их детей, стала ясна генетическая основа заболевания, что позволит супругам в дальнейшем произвести на свет здорового малыша и обеспечить должный уход за своими детьми.</p>
+                            </div>
+                            <a class="template__grid-link" href="#">
+                                <svg width="34.354" height="17.593"><g fill="none"><path d="M.354.239h34v17h-34z"/><path d="M33.062 8.797H1.413M1.414 8.797l8.437-7.385M1.414 8.797l8.44 7.386" stroke="#f28314" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="79.84" stroke-width="2"/></g></svg>
+                                Вернуться в раздел
                             </a>
                         </div>
-                        <div class="help-form template__help-form">
+                        <div class="help-form template__help-form help-template__form">
                             <div class="help-form__wrapper">
                                 <form class="form help-form__instance">
                                     <span class="help-form__title">Я хочу помочь</span>
