--- a/app/assets/help.html
+++ b/app/assets/help.html
@@ -59,7 +59,7 @@
     </header>
     <!-- End header -->
     <!-- Begin main -->
-    <main class="main template health-template">
+    <main class="main template help-template">
         <div class="template__wrapper">
             <div class="container">
                 <div class="row">
